winrt: Fix QAudioDeviceInfo::default*Device to return name instead id

3c5bbb0dac7bed3199ddddc88c0175d5a2ac1036 added the default* functions to
query a default device. However, IMediaDeviceStatics can only return ids
and not the device names. Hence we need to invoke availableDevices to
create the internal mapping and return the device name to properly
initialize audio devices afterwards.

Task-number: QTBUG-55631
Change-Id: I38b9205a933de5e41296a2e5880d0379db41ad97
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>